--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css %>" />
   </head>
   <body>
     <div class="root">
       <header class="header root__section">
-        <img src="./images/logo.svg" alt="mesto logo" class="logo" />
+        <img src="<%=require('./images/logo.svg').default%>" alt="mesto logo" class="logo" />
       </header>
       <div class="profile root__section">
         <div class="user-info">
@@ -26,7 +26,7 @@
       <div class="places-list root__section"></div>
       <div class="popup">
         <div class="popup__content">
-          <img src="./images/close.svg" alt="" class="popup__close" />
+          <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" />
           <h3 class="popup__title">Новое место</h3>
           <form class="popup__form" name="new" novalidate>
             <input
@@ -53,7 +53,7 @@
       </div>
       <div class="popup edit__popup">
           <div class="popup__content">
-            <img src="./images/close.svg" alt="" class="popup__close" />
+            <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" />
             <h3 class="popup__title">Редактировать</h3>
             <form class="popup__form" name="edit" novalidate>
               <input 
@@ -84,12 +84,12 @@
     </div>
     <div class="popup bigImage__popup">
         <div class="popup__bg-image">
-          <img src="./images/close.svg" alt="" class="popup__close" />
+          <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" />
         </div>
     </div>
     <div class="popup avatar__popup">
       <div class="popup__content">
-        <img src="./images/close.svg" alt="" class="popup__close" />
+        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" />
         <h3 class="popup__title">Обновить аватар</h3>
         <form class="popup__form" name="avatar" novalidate>
           <input 
@@ -105,14 +105,6 @@
         </form>
       </div>
   </div>
-    <script src="js/initialCards.js" defer></script>
-    <script src="js/Card.js" defer></script>
-    <script src="js/CardList.js" defer></script>
-    <script src="js/Popup.js" defer></script>
-    <script src="js/BigImage.js" defer></script>
-    <script src="js/UserInfo.js" defer></script>
-    <script src="js/FormValidator.js" defer></script>
-    <script src="js/Api.js" defer></script>
-    <script src="js/script.js" defer></script>
+    <script type="module" src="<%= htmlWebpackPlugin.files.js %>"></script>
   </body>
 </html>
